# grandstrategygame

./: .travis.yml  CMakeLists.txt  README.md  builder.sh  description.txt
tester/: tester.cpp  tests.cpp  tests.h
